--- a/mounts/mosquitto/mosquitto.conf
+++ b/mounts/mosquitto/mosquitto.conf
@@ -20,9 +20,23 @@
 # Port to use for the default listener.
 port 1883
 
-# -----------------------------------------------------------------
+# =================================================================
 # Certificate based SSL/TLS support
-# -----------------------------------------------------------------
-cafile /mosquitto/config/ca_certificates/myCA.pem
-keyfile /mosquitto/config/certs/broker.key
+# =================================================================
+
+# Path to the PEM encoded server certificate.
 certfile /mosquitto/config/certs/broker.crt
+
+# Path to the PEM encoded keyfile.
+keyfile /mosquitto/config/certs/broker.key
+
+# Path to the PEM encoded CA
+cafile /mosquitto/config/ca_certificates/myCA.pem
+
+# =================================================================
+# User Authentication
+# =================================================================
+
+#To create a password, use command mosquitto_passwd
+allow_anonymous false
+password_file /mosquitto/config/passwords
