--- a/prueba/brokerFuera/mosquitto.conf
+++ b/prueba/brokerFuera/mosquitto.conf
@@ -18,11 +18,25 @@
 # =================================================================
 
 # Port to use for the default listener.
-port 8883
+port 1883
 
-# -----------------------------------------------------------------
+# =================================================================
 # Certificate based SSL/TLS support
-# -----------------------------------------------------------------
-cafile /etc/mosquitto/ca_certificates/myCA.pem
-keyfile /etc/mosquitto/certs/broker.key
+# =================================================================
+
+# Path to the PEM encoded server certificate.
 certfile /etc/mosquitto/certs/broker.crt
+
+# Path to the PEM encoded keyfile.
+keyfile /etc/mosquitto/certs/broker.key
+
+# Path to the PEM encoded CA
+cafile /etc/mosquitto/ca_certificates/myCA.pem
+
+# =================================================================
+# User Authentication
+# =================================================================
+
+#To create a password, use command mosquitto_passwd
+allow_anonymous false
+password_file /etc/mosquitto/conf.d/passwords
