ended iot-sec branch

--- a/extra/snpmk8/ingress.yaml
+++ b/extra/snpmk8/ingress.yaml
@@ -191,5 +191,6 @@ spec:
         - --configmap=$(POD_NAMESPACE)/nginx-load-balancer-microk8s-conf
         - --tcp-services-configmap=$(POD_NAMESPACE)/nginx-ingress-tcp-microk8s-conf
         - --udp-services-configmap=$(POD_NAMESPACE)/nginx-ingress-udp-microk8s-conf
+        - --default-ssl-certificate=default/ingress-cert
         $DEFAULT_CERT
         $EXTRA_ARGS
