--- a/kubernetesFiles/ingress/ingress.yaml
+++ b/kubernetesFiles/ingress/ingress.yaml
@@ -6,10 +6,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
-    #protocolo para conecatarse con el interior, cambiar a http
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     #cambiar y quitar
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     #nginx.ingress.kubernetes.io/proxy-ssl-secret: cert 
 
 spec:
