added monunt in nodered

--- a/kubernetesFiles/nodeRED/nodered.yaml
+++ b/kubernetesFiles/nodeRED/nodered.yaml
@@ -22,6 +22,16 @@ spec:
           image: nodered/node-red
           ports:
           - containerPort: 1880
+          volumeMounts:
+            - mountPath: /data
+              name: test-volume
+      volumes:
+        - name: test-volume
+          hostPath:
+            # directory location on host
+            path: /home/manuel/Proyectos/privacy-manager/mounts/nodered
+            # this field is optional
+            type: Directory
 ---
 apiVersion: v1
 kind: Service
