--- a/mounts/nodered/.config.nodes.json
+++ b/mounts/nodered/.config.nodes.json
@@ -1,8 +1,9 @@
 {
     "node-red": {
         "name": "node-red",
-        "version": "1.2.7",
+        "version": "2.0.5",
         "local": false,
+        "user": false,
         "nodes": {
             "inject": {
                 "name": "inject",
@@ -11,6 +12,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/20-inject.js"
             },
@@ -21,6 +23,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/21-debug.js"
             },
@@ -31,6 +34,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/24-complete.js"
             },
@@ -41,6 +45,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/25-catch.js"
             },
@@ -51,6 +56,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/25-status.js"
             },
@@ -62,6 +68,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/60-link.js"
             },
@@ -72,6 +79,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/90-comment.js"
             },
@@ -82,6 +90,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/common/98-unknown.js"
             },
@@ -92,6 +101,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/10-function.js"
             },
@@ -102,6 +112,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/10-switch.js"
             },
@@ -112,6 +123,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/15-change.js"
             },
@@ -122,6 +134,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/16-range.js"
             },
@@ -132,6 +145,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/80-template.js"
             },
@@ -142,6 +156,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/89-delay.js"
             },
@@ -152,6 +167,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/89-trigger.js"
             },
@@ -162,8 +178,20 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/90-exec.js"
+            },
+            "rbe": {
+                "name": "rbe",
+                "types": [
+                    "rbe"
+                ],
+                "enabled": true,
+                "local": false,
+                "user": false,
+                "module": "node-red",
+                "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/function/rbe.js"
             },
             "tls": {
                 "name": "tls",
@@ -172,6 +200,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/05-tls.js"
             },
@@ -182,6 +211,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/06-httpproxy.js"
             },
@@ -194,6 +224,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/10-mqtt.js"
             },
@@ -205,6 +236,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/21-httpin.js"
             },
@@ -215,6 +247,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/21-httprequest.js"
             },
@@ -228,6 +261,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/22-websocket.js"
             },
@@ -240,6 +274,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/31-tcpin.js"
             },
@@ -251,6 +286,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/network/32-udp.js"
             },
@@ -261,6 +297,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/parsers/70-CSV.js"
             },
@@ -271,6 +308,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/parsers/70-HTML.js"
             },
@@ -281,6 +319,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/parsers/70-JSON.js"
             },
@@ -291,6 +330,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/parsers/70-XML.js"
             },
@@ -301,6 +341,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/parsers/70-YAML.js"
             },
@@ -312,6 +353,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/sequence/17-split.js"
             },
@@ -322,6 +364,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/sequence/18-sort.js"
             },
@@ -332,6 +375,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/sequence/19-batch.js"
             },
@@ -343,6 +387,7 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/storage/10-file.js"
             },
@@ -353,42 +398,9 @@
                 ],
                 "enabled": true,
                 "local": false,
+                "user": false,
                 "module": "node-red",
                 "file": "/usr/src/node-red/node_modules/@node-red/nodes/core/storage/23-watch.js"
-            }
-        }
-    },
-    "node-red-node-rbe": {
-        "name": "node-red-node-rbe",
-        "version": "0.2.9",
-        "local": false,
-        "nodes": {
-            "rbe": {
-                "name": "rbe",
-                "types": [
-                    "rbe"
-                ],
-                "enabled": true,
-                "local": false,
-                "module": "node-red-node-rbe",
-                "file": "/usr/src/node-red/node_modules/node-red-node-rbe/rbe.js"
-            }
-        }
-    },
-    "node-red-node-tail": {
-        "name": "node-red-node-tail",
-        "version": "0.1.1",
-        "local": false,
-        "nodes": {
-            "tail": {
-                "name": "tail",
-                "types": [
-                    "tail"
-                ],
-                "enabled": true,
-                "local": false,
-                "module": "node-red-node-tail",
-                "file": "/usr/src/node-red/node_modules/node-red-node-tail/28-tail.js"
             }
         }
     },
@@ -396,6 +408,7 @@
         "name": "node-red-node-mysql",
         "version": "0.1.1",
         "local": true,
+        "user": true,
         "nodes": {
             "mysql": {
                 "name": "mysql",
@@ -405,6 +418,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-node-mysql",
                 "file": "/data/node_modules/node-red-node-mysql/68-mysql.js"
             }
@@ -414,6 +428,7 @@
         "name": "node-red-contrib-fiware_official",
         "version": "1.0.2",
         "local": true,
+        "user": true,
         "nodes": {
             "Entity": {
                 "name": "Entity",
@@ -422,6 +437,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/entity/entity.js"
             },
@@ -432,6 +448,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/dataset/dataset.js"
             },
@@ -442,6 +459,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/update/update.js"
             },
@@ -452,6 +470,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/subscription/subscription.js"
             },
@@ -462,6 +481,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/v2ToLD/v2ToLD.js"
             },
@@ -472,6 +492,7 @@
                 ],
                 "enabled": true,
                 "local": true,
+                "user": false,
                 "module": "node-red-contrib-fiware_official",
                 "file": "/data/node_modules/node-red-contrib-fiware_official/src/nodes/NGSI/contextbroker/contextbroker.js"
             }
