--- a/mounts/mosquitto/mosquitto.conf
+++ b/mounts/mosquitto/mosquitto.conf
@@ -25,18 +25,18 @@ port 1883
 # =================================================================
 
 # Path to the PEM encoded server certificate.
-certfile /mosquitto/config/certs/broker.crt
+# certfile /mosquitto/config/certs/broker.crt
 
 # Path to the PEM encoded keyfile.
-keyfile /mosquitto/config/certs/broker.key
+# keyfile /mosquitto/config/certs/broker.key
 
 # Path to the PEM encoded CA
-cafile /mosquitto/config/ca_certificates/myCA.pem
+# cafile /mosquitto/config/ca_certificates/myCA.pem
 
 # =================================================================
 # User Authentication
 # =================================================================
 
 #To create a password, use command mosquitto_passwd
-allow_anonymous false
-password_file /mosquitto/config/passwords
+#allow_anonymous false
+#password_file /mosquitto/config/passwords
