--- a/kubernetesFiles/mysql/mysql-statefulset.yaml
+++ b/kubernetesFiles/mysql/mysql-statefulset.yaml
@@ -163,5 +163,5 @@ spec:
       accessModes: ["ReadWriteOnce"]
       resources:
         requests:
-          storage: 1Gi
+          storage: 500Mi
 
